[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[project]
name = "rs2py"
requires-python = ">=3.6"
description = "Rust Extention for Python"
readme = "README.md"
keywords = ["rust", "python", "utils"]
authors = [
  {email = "yvictor3141@gmail.com"},
  {name = "YVictor"}
]
maintainers = [
  {name = "YVictor", email = "yvictor3141@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]


