[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "rs2py"
requires-python = ">=3.6"
description = "Rust Extention for Python"
readme = "README.md"
keywords = ["rust", "python", "utils"]
authors = [
  {email = "yvictor3141@gmail.com"},
  {name = "YVictor"}
]
maintainers = [
  {name = "YVictor", email = "yvictor3141@gmail.com"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
[tool.maturin]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
features = ["pyo3/extension-module"]

